--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>Aerial by HTML5 UP</title>
@@ -6,7 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	
 	<body class="loading">
 		<div id="wrapper">
 			<div id="bg"></div>
@@ -14,8 +14,8 @@
 			<div id="main">
 
 					<header id="header">
-						<h1>Ingrid Stoleru</h1>
-						<p>Student && Software Enthustiast</p>
+						<h1>Georgiana Ingrid Stoleru</h1>
+						<p>Software Enthusiast &nbsp;&bull;&nbsp; CS Student &nbsp;&bull;&nbsp; EU Careers Student Ambassador</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -33,7 +33,6 @@
 
 			</div>
 		</div>
-
 		<script>
 			window.onload = function() { document.body.className = ''; }
 			window.ontouchmove = function() { return false; }
