Changes in name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="main">
 
 					<header id="header">
-						<h1>Georgiana Ingrid Stoleru</h1>
+						<h1>Ingrid Stoleru</h1>
 						<p>Software Enthusiast &nbsp;&bull;&nbsp; CS Student &nbsp;&bull;&nbsp; EU Careers Student Ambassador</p>
 						<nav>
 							<ul>
