--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 						<p>Software Enthusiast &nbsp;&bull;&nbsp; CS Student &nbsp;&bull;&nbsp; EU Careers Student Ambassador</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/StoleruI" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/ingrid.stoleru" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://github.com/ingridstoleru" class="icon fa-github"><span class="label">Github</span></a></li>
 							</ul>
 						</nav>
 					</header>
